--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stock</title>
-    <script src="./Stock.js"></script>
+    <script src="./js/Stock.js"></script>
 </head>
 <body>
     
