--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sistema de stock</title>
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 
 <body>
@@ -65,7 +66,7 @@
       
       <div>
         <form>
-          <input class="enviar" type="submit" value="Enviar">
+          <input class="enviar" id="button" type="submit" value="Enviar" onclick="alertaEnviar()">
         </form>
       </div>
 
@@ -95,6 +96,8 @@
     <script src="./js/index.js"></script>
 
   </main>
+
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 
 </body>
 
