--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
 
   <main class="main">
 
-    <h1 class="titulo">Stock de mercaderia</h1>
+   
+    <div>
+      
+      
+      <div class="cuadrado"></div>
+      <img class="logo" src="./imagenes/Logo Troquelcart.png" alt="">
+      <h1 class="titulo">Stock de mercaderia</h1>
+
+    </div>  
+   
 
     <div id="formStock" class="formulario_enviar" >
 
